--- a/client/components/cards/labels.jade
+++ b/client/components/cards/labels.jade
@@ -12,13 +12,13 @@ template(name="createLabelPopup")
   form.create-label
     with(color=defaultColor)
       +formLabel
-    button.primary.wide(type="submit") {{_ 'create'}}
+    button.primary.full(type="submit") {{_ 'create'}}
 
 template(name="editLabelPopup")
   form.edit-label
     +formLabel
-    button.primary.wide.left(type="submit") {{_ 'save'}}
-    button.js-delete-label.negate.wide.right {{_ 'delete'}}
+    button.primary.full.left(type="submit") {{_ 'save'}}
+    button.js-delete-label.negate.full.right {{_ 'delete'}}
 
 template(name="deleteLabelPopup")
   p {{_ "label-delete-pop"}}
@@ -28,13 +28,13 @@ template(name="cardLabelsPopup")
   ul.edit-labels-pop-over
     each board.labels
       li.js-card-label-item
-        a.card-label-edit-button.fa.fa-pencil.js-edit-label
-        if isTouchScreenOrShowDesktopDragHandles
-          span.fa.label-handle(class="fa-arrows" title="{{_ 'dragLabel'}}")
         span.card-label.card-label-selectable.js-select-label.card-label-wrapper(class="card-label-{{color}}"
           class="{{# if isLabelSelected ../_id }}active{{/if}}")
             +viewer
               = name
             if(isLabelSelected ../_id)
               i.card-label-selectable-icon.fa.fa-check
+        a.card-label-edit-button.fa.fa-pencil.js-edit-label
+        if isTouchScreenOrShowDesktopDragHandles
+          span.fa.label-handle(class="fa-arrows" title="{{_ 'dragLabel'}}")
   a.emphasis-button.full.js-add-label {{_ 'label-create'}}
