--- a/client/components/cards/minicard.css
+++ b/client/components/cards/minicard.css
@@ -120,8 +120,16 @@
     font-size: 0.8em;
     grid-auto-rows: minmax(1.3lh, auto);
   }
+  .minicard-label {
+    height: 80%;
+    box-sizing: border-box;
+    aspect-ratio: 1/1;
+    border-radius: 0.3ch;
+  }
   .minicard-labels {
-    grid-template-columns: repeat(auto-fill, minmax(12ch, auto));
+    grid-template-columns: repeat(auto-fit, minmax(4ch, auto));
+    grid-auto-rows: 1fr;
+    grid-auto-flow: dense;
     gap: 0.2lh 0.5ch;
   }
   .minicard-labels-no-text {
