--- a/client/components/users/userAvatar.css
+++ b/client/components/users/userAvatar.css
@@ -5,13 +5,12 @@
   border-radius: 50%;
   padding: 0.2em;
   font-size: 0.9em;
-  height: var(--space-m-l);
-  width: var(--space-m-l);
-  max-height: var(--space-m-l);
-  max-width: var(--space-m-l);
+  height: var(--space-xs-m);
+  width: var(--space-xs-m);
+  max-height: var(--space-xs-m);
+  max-width: var(--space-xs-m);
   align-items: center;
   justify-content: center;
-  align-self: flex-start;
   color: #111;
   margin: 0 0.2ch;
   overflow: hidden;
